# langchain_example

./: .env.example  pyproject.toml
src/: classify_text.py  config.py  extranction_chan.py  model.py  semantic_search.py  simple_chatbot.py  simple_llm.py
