[project]
name = "langchain-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.25",
    "langchain-google-genai>=2.1.4",
    "langchain-perplexity>=0.1.1",
    "langgraph>=0.4.3",
]
